--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Клонування репозиторію
         uses: actions/checkout@v2
 
+      - name: Debugging git status
+        run: git status
+
       - name: Виконання API-запиту
         run: |
           curl -s "https://gnews.io/api/v4/top-headlines?category=ukraine&lang=en&country=uk&max=2&apikey=${{ secrets.GNEWS_API_KEY }}" -o news.json
