--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -13,17 +13,24 @@ jobs:
       - name: Клонування репозиторію
         uses: actions/checkout@v2
 
-      - name: Debugging git status
-        run: git status
-
       - name: Виконання API-запиту
         run: |
           curl -s "https://gnews.io/api/v4/top-headlines?category=ukraine&lang=en&country=uk&max=2&apikey=${{ secrets.GNEWS_API_KEY }}" -o news.json
       
-      - name: Коміт змін
+      - name: Налаштування Git
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+
+      - name: Перевірка змін у news.json
+        run: |
+          if git diff --exit-code news.json; then
+            echo "No changes detected, skipping commit."
+            exit 0
+          fi
+
+      - name: Коміт змін
+        run: |
           git add news.json
           git commit -m "Автоматичне оновлення новин"
           git push
