--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -29,8 +29,10 @@ jobs:
             exit 0
           fi
 
-      - name: Коміт змін
+      - name: Коміт змін та пуш
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add news.json
           git commit -m "Автоматичне оновлення новин"
-          git push
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
